feat: add new endpoint patchFolder and update swagger
