# swagger/swagger.json
@@ -23,7 +23,6 @@
       "User": {
         "type": "object",
         "properties": {
-        
           "email": {
             "type": "string",
             "example": "user@example.com"
@@ -33,7 +32,10 @@
             "example": "password123"
           }
         },
-        "required": ["email", "password"]
+        "required": [
+          "email",
+          "password"
+        ]
       },
       "Folder": {
         "type": "object",
@@ -85,7 +87,9 @@
   "paths": {
     "/auth": {
       "post": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Регистрация пользователя",
         "requestBody": {
           "required": true,
@@ -119,7 +123,9 @@
     },
     "/login": {
       "post": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Вход в учетную запись",
         "requestBody": {
           "required": true,
@@ -151,11 +157,15 @@
     },
     "/getMe": {
       "get": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Получение текущего пользователя",
-        "security": [{
-          "bearerAuth": []
-        }],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "Возвращает данные текущего пользователя",
@@ -178,7 +188,9 @@
     },
     "/patchUser/{id}": {
       "patch": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Редактирование профиля пользователя",
         "parameters": [
           {
@@ -233,7 +245,9 @@
     },
     "/folders": {
       "post": {
-        "tags": ["Folders"],
+        "tags": [
+          "Folders"
+        ],
         "summary": "Создание папки",
         "requestBody": {
           "required": true,
@@ -268,7 +282,9 @@
         }
       },
       "get": {
-        "tags": ["Folders"],
+        "tags": [
+          "Folders"
+        ],
         "summary": "Получение всех папок",
         "responses": {
           "200": {
@@ -289,7 +305,9 @@
     },
     "/folders/{id}": {
       "get": {
-        "tags": ["Folders"],
+        "tags": [
+          "Folders"
+        ],
         "summary": "Получение папки по ID",
         "parameters": [
           {
@@ -319,7 +337,9 @@
         }
       },
       "delete": {
-        "tags": ["Folders"],
+        "tags": [
+          "Folders"
+        ],
         "summary": "Удаление папки по ID",
         "parameters": [
           {
@@ -349,9 +369,69 @@
         }
       }
     },
+    "/folder": {
+      "patch": {
+        "tags": [
+          "Folders"
+        ],
+        "summary": "Обновление названия существующей папки",
+        "description": "API для обновления названия папки, используя ID папки, передаваемый в теле запроса.",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "type": "string",
+                    "description": "Идентификатор папки, которую требуется обновить",
+                    "example": "609c25b4f1b4c37acc1cc3e1"
+                  },
+                  "name": {
+                    "type": "string",
+                    "description": "Новое название папки",
+                    "example": "Обновленное название"
+                  }
+                },
+                "required": [
+                  "id",
+                  "name"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Название папки успешно обновлено",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Folder"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Ошибка запроса, проверьте входные данные"
+          },
+          "404": {
+            "description": "Папка с указанным ID не найдена"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/folders/{folderId}/notes": {
       "post": {
-        "tags": ["Notes"],
+        "tags": [
+          "Notes"
+        ],
         "summary": "Добавление заметки в папку",
         "parameters": [
           {
@@ -393,7 +473,9 @@
     },
     "/folders/{folderId}/notes/{noteId}": {
       "delete": {
-        "tags": ["Notes"],
+        "tags": [
+          "Notes"
+        ],
         "summary": "Удаление заметки из папки",
         "parameters": [
           {
@@ -432,7 +514,9 @@
         }
       },
       "patch": {
-        "tags": ["Notes"],
+        "tags": [
+          "Notes"
+        ],
         "summary": "Обновление заметки в папке",
         "parameters": [
           {
